# data-ingestion-benchmark

./: .gitlab-ci.yml  Cargo.toml  README.md
actix/: Cargo.toml
actix/src/: main.rs
axum/: Cargo.toml
axum/src/: main.rs
benchmark/: Cargo.toml
benchmark/src/: main.rs
common/src/: lib.rs
frameworkless/: Cargo.toml
frameworkless-async/: Cargo.toml
frameworkless-async/src/: main.rs
frameworkless/src/: main.rs
gin/: go.mod  main.go
