[package]
name = "actix"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5.1", default-features = false, features = ["macros"] }
async-tempfile = { version = "0.5.0", default-features = false }
clap = { version = "4.5.4", default-features = false, features = ["color", "derive", "help", "std", "usage"] }
tokio = { version = "1.37.0", default-features = false, features = ["io-util"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt"] }
