[package]
name = "axum"
version = "0.0.0"
edition = "2021"

[dependencies]
async-tempfile = { version = "0.5.0", default-features = false }
axum = { version = "0.7.5", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5.4", default-features = false, features = ["color", "derive", "help", "std", "usage"] }
futures = { version = "0.3.30", default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", default-features = false, features = ["io"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt"] }
